force-app/main/default/objects/OpportunityLineItem/fields/Annualised_Value__c.field-meta.xml
<CustomField>
    <fullName>Annualised_Value__c</fullName>
    <formula>If(AND(NOT(ISNULL( Contract_Start_Date__c )),NOT(ISNULL( Contract_End_Date__c))), IF(Contract_End_Date__c - Contract_Start_Date__c &lt; 367, TotalPrice, ( TotalPrice / Revenue_Duration__c ) * (CASE(MOD(Opportunity.Start_of_CFY__c - DATE(1985,6,24),7), 
0 , CASE( MOD( Opportunity.End_of_CFY__c -Opportunity.Start_of_CFY__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( Opportunity.End_of_CFY__c -Opportunity.Start_of_CFY__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( Opportunity.End_of_CFY__c -Opportunity.Start_of_CFY__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( Opportunity.End_of_CFY__c -Opportunity.Start_of_CFY__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( Opportunity.End_of_CFY__c -Opportunity.Start_of_CFY__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( Opportunity.End_of_CFY__c -Opportunity.Start_of_CFY__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( Opportunity.End_of_CFY__c -Opportunity.Start_of_CFY__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR(( Opportunity.End_of_CFY__c -Opportunity.Start_of_CFY__c )/7)*5))),0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annualised Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>