force-app/main/default/objects/OpportunityLineItem/fields/APT_OPC_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>APT_OPC_Line_Items__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OPC Line Items</label>
    <referenceTo>APT_Opportunity_Product_Line_Item__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>