force-app/main/default/objects/OpportunityLineItem/fields/Change_Classification__c.field-meta.xml
<CustomField>
    <fullName>Change_Classification__c</fullName>
    <inlineHelpText>A product classification of Renewal can be overwritten as Growth if sufficient justification exists. You must record in the Opportunity any evidence of the sales effort (e.g. emails with customer, call logs) to back your claim.</inlineHelpText>
    <label>Growth?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>