force-app/main/default/objects/OpportunityLineItem/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <inlineHelpText>Product Classification (‘New Business’, ‘Cross-Sell’, ‘Win Back’, ‘Renewal’ and ‘Growth’) is essential enterprise information that is used for accurate sales pipeline and commission calculation. This classification (apart from Growth) is auto calculated.</inlineHelpText>
    <label>Classification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Growth</fullName>
            </value>
            <value>
                <fullName>New Business</fullName>
            </value>
            <value>
                <fullName>New Business - One Off</fullName>
            </value>
            <value>
                <fullName>Cross Sell</fullName>
            </value>
            <value>
                <fullName>Win Back</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>