force-app/main/default/objects/OpportunityLineItem/fields/Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date__c</fullName>
    <inlineHelpText>Revenue end date should be the contract end date, or earlier if that is what is expected. The revenue end date should not be beyond the contract end date.</inlineHelpText>
    <label>Revenue End Date</label>
    <type>Date</type>
</CustomField>