force-app/main/default/objects/OpportunityLineItem/fields/Contract_Product__c.field-meta.xml
<CustomField>
    <fullName>Contract_Product__c</fullName>
    <defaultValue>&quot;Yes&quot;</defaultValue>
    <inlineHelpText>If your Opportunity does not require a contract, then the ‘Contract Product?’ field of all products in the Opportunity must have been flagged as not requiring a contract.</inlineHelpText>
    <label>Contract Product?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>