force-app/main/default/objects/OpportunityLineItem/fields/Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Start_Date__c</fullName>
    <inlineHelpText>The ‘revenue start date’ is the date the customer is first invoiced for services provided to them. Please factor into the ‘start date’ any on-boarding and implementation time required for the product or service.</inlineHelpText>
    <label>Revenue Start Date</label>
    <type>Date</type>
</CustomField>