force-app/main/default/objects/OpportunityLineItem/fields/IncrementalRevenue__c.field-meta.xml
<CustomField>
    <fullName>IncrementalRevenue__c</fullName>
    <description>Quantifies the growth in revenue from a particular customer over previous periods. It showcases the additional earnings derived beyond what was generated in the prior time frames. This metric is crucial for gauging the expansion of business opportunities with an existing customer.</description>
    <inlineHelpText>Growth in revenue from the customer compared to previous periods.</inlineHelpText>
    <label>Incremental Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>