force-app/main/default/objects/OpportunityLineItem/fields/InYearRevenueIncrementalOnly__c.field-meta.xml
<CustomField>
    <fullName>InYearRevenueIncrementalOnly__c</fullName>
    <description>TCV In Year Revenue INCREMENTAL ONLY (with products) (IYR).</description>
    <formula>IF(
Contract_Start_Date__c = Contract_End_Date__c,
TotalPrice,
IF(
IF(
IF(Close_Date__c &lt; DATE(YEAR(Close_Date__c), 7, 1), DATE(YEAR(Close_Date__c), 6, 30), DATE(YEAR(Close_Date__c) + 1, 6, 30)) &gt; Contract_End_Date__c,
Contract_End_Date__c,
IF(Close_Date__c &lt; DATE(YEAR(Close_Date__c), 7, 1), DATE(YEAR(Close_Date__c), 6, 30), DATE(YEAR(Close_Date__c) + 1, 6, 30))
) = IF(Close_Date__c &gt; Contract_Start_Date__c, Close_Date__c, Contract_Start_Date__c),
(1 / ( (Contract_End_Date__c - Contract_Start_Date__c) + 1)) *  TotalIncremental__c ,
IF(
(
IF(
IF(Close_Date__c &lt; DATE(YEAR(Close_Date__c), 7, 1), DATE(YEAR(Close_Date__c), 6, 30), DATE(YEAR(Close_Date__c) + 1, 6, 30)) &gt; Contract_End_Date__c,
Contract_End_Date__c,
IF(Close_Date__c &lt; DATE(YEAR(Close_Date__c), 7, 1), DATE(YEAR(Close_Date__c), 6, 30), DATE(YEAR(Close_Date__c) + 1, 6, 30))
) -
IF(Close_Date__c &gt; Contract_Start_Date__c, Close_Date__c, Contract_Start_Date__c)
) &gt; 0,
(
(
IF(
IF(Close_Date__c &lt; DATE(YEAR(Close_Date__c), 7, 1), DATE(YEAR(Close_Date__c), 6, 30), DATE(YEAR(Close_Date__c) + 1, 6, 30)) &gt; Contract_End_Date__c,
Contract_End_Date__c,
IF(Close_Date__c &lt; DATE(YEAR(Close_Date__c), 7, 1), DATE(YEAR(Close_Date__c), 6, 30), DATE(YEAR(Close_Date__c) + 1, 6, 30))
) -
IF(Close_Date__c &gt; Contract_Start_Date__c, Close_Date__c, Contract_Start_Date__c)
) + 1
) / (Contract_End_Date__c - Contract_Start_Date__c + 1) *  TotalIncremental__c ,
0
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>TCV In Year Revenue INCREMENTAL ONLY (with products) (IYR).</inlineHelpText>
    <label>In Year Revenue Incremental Only</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>