force-app/main/default/objects/OpportunityLineItem/fields/Off_the_shelf_check__c.field-meta.xml
<CustomField>
    <fullName>Off_the_shelf_check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Off the shelf</label>
    <type>Checkbox</type>
</CustomField>