force-app/main/default/objects/OpportunityLineItem/fields/Opportunity_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Item_Number__c</fullName>
    <displayFormat>{00000000}</displayFormat>
    <externalId>true</externalId>
    <label>Opportunity Item Number</label>
    <type>AutoNumber</type>
</CustomField>