force-app/main/default/objects/OpportunityLineItem/fields/Pro_rata_Rev_last_week__c.field-meta.xml
<CustomField>
    <fullName>Pro_rata_Rev_last_week__c</fullName>
    <formula>IF( ( Opportunity.Today_Week__c  -  Opportunity.Close_Date_Week__c  = 1),  Pro_rata_Revenue__c  , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pro-rata Rev (last week)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>