force-app/main/default/objects/OpportunityLineItem/fields/ProdClassFieldUpdate__c.field-meta.xml
<CustomField>
    <fullName>ProdClassFieldUpdate__c</fullName>
    <label>ProdClassFieldUpdate</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>