force-app/main/default/objects/OpportunityLineItem/fields/RetainedRevenue__c.field-meta.xml
<CustomField>
    <fullName>RetainedRevenue__c</fullName>
    <description>Represents the amount of revenue that the customer continues to provide in the current period, reflecting the consistency and stability of earnings from a particular customer.</description>
    <inlineHelpText>Revenue consistently provided by the customer in the current period.</inlineHelpText>
    <label>Retained Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>