force-app/main/default/objects/OpportunityLineItem/fields/Sub_Classification__c.field-meta.xml
<CustomField>
    <fullName>Sub_Classification__c</fullName>
    <label>Sub Classification</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Classification__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Product Penetration</fullName>
            </value>
            <value>
                <fullName>Up Rate</fullName>
            </value>
            <value>
                <fullName>Up Sell</fullName>
            </value>
            <value>
                <fullName>Contracted Price Increases</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>