force-app/main/default/objects/OpportunityLineItem/fields/TotalInYearRevenue__c.field-meta.xml
<CustomField>
    <fullName>TotalInYearRevenue__c</fullName>
    <label>Total In Year Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>