force-app/main/default/objects/OpportunityLineItem/fields/TweleveMonthRevenue__c.field-meta.xml
<CustomField>
    <fullName>TweleveMonthRevenue__c</fullName>
    <label>Revenue Last 12 Months</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>