force-app/main/default/objects/OpportunityLineItem/fields/X3MonthAverageActual__c.field-meta.xml
<CustomField>
    <fullName>X3MonthAverageActual__c</fullName>
    <description>Rolling figure which is the average of the last 3 months of actual trade from the Grouped Account Revenue figure. It should be updated on a rolling monthly basis while the Opportunity is still in flight</description>
    <inlineHelpText>Rolling figure which is the average of the last 3 months of actual trade from the Grouped Account Revenue figure. It should be updated on a rolling monthly basis while the Opportunity is still in flight</inlineHelpText>
    <label>3 Month Average Actual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>