force-app/main/default/objects/OpportunityLineItem/fields/YED__c.field-meta.xml
<CustomField>
    <fullName>YED__c</fullName>
    <description>In Year End Date</description>
    <formula>IF(
        FED__c &gt; Contract_End_Date__c , Contract_End_Date__c , FED__c
    )</formula>
    <label>In Year End Date</label>
    <type>Date</type>
</CustomField>