force-app/main/default/objects/OpportunityLineItem/validationRules/APT_Field_non_updateable.validationRule-meta.xml
<ValidationRule>
    <fullName>APT_Field_non_updateable</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( APT_Is_Apttus_Opportunity_Line_item__c )</errorConditionFormula>
    <errorDisplayField>APT_Is_Apttus_Opportunity_Line_item__c</errorDisplayField>
    <errorMessage>Apttus Field is non updateable.</errorMessage>
</ValidationRule>