force-app/main/default/objects/OpportunityLineItem/validationRules/APT_opportunity_product_non_editable.validationRule-meta.xml
<ValidationRule>
    <fullName>APT_opportunity_product_non_editable</fullName>
    <active>false</active>
    <description>Apttus opportunity products can not be updated

/*Shashwat.Nath@Auspost.com Deactivated this on 10/09/2020 rule as part of the OPC Changes for STP release 2 where uers would be allowed to edit the apttus products*/</description>
    <errorConditionFormula>!ISNEW() &amp;&amp;  APT_Is_Apttus_Opportunity_Line_item__c &amp;&amp; !APT_Apttus_Delete_Override__c &amp;&amp; ! ISCHANGED(APT_Apttus_Delete_Override__c)</errorConditionFormula>
    <errorDisplayField>Hidden_Contract_End_Date__c</errorDisplayField>
    <errorMessage>Apttus opportunity products can not be updated</errorMessage>
</ValidationRule>