force-app/main/default/objects/OpportunityLineItem/validationRules/Contract_duration_must_be_12_months.validationRule-meta.xml
<ValidationRule>
    <fullName>Contract_duration_must_be_12_months</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    OR(
        ISPICKVAL(Product2.Product_Level_2__c, &quot;Australia Post Global eCommerce Solutions&quot;),
        ISPICKVAL(Product2.Product_Level_2__c, &quot;Decipha + Mailrooms Div&quot;),
        ISPICKVAL(Product2.Product_Level_2__c, &quot;International Services (exc APG)&quot;),
        ISPICKVAL(Product2.Product_Level_2__c, &quot;Parcel + Express Services&quot;),
        ISPICKVAL(Product2.Product_Level_2__c, &quot;StarTrack Courier + Fulfilment&quot;)
    ),
    NOT($Permission.BG_Sales_Operations),
    (Contract_End_Date__c - Contract_Start_Date__c) &lt; 365,
    OR(
        ISCHANGED(Contract_Start_Date__c),
        ISCHANGED(Contract_End_Date__c)
    )
)</errorConditionFormula>
    <errorMessage>The contract duration for this product must be at least one year.</errorMessage>
</ValidationRule>