force-app/main/default/objects/OpportunityLineItem/validationRules/Phase_2_Contract_end_date_to_be_later.validationRule-meta.xml
<ValidationRule>
    <fullName>Phase_2_Contract_end_date_to_be_later</fullName>
    <active>true</active>
    <description>Revenue End date to be earlier than start date</description>
    <errorConditionFormula>Contract_Start_Date__c &gt;= Contract_End_Date__c</errorConditionFormula>
    <errorDisplayField>Contract_End_Date__c</errorDisplayField>
    <errorMessage>Please make sure the Revenue End Date is after the Start Date.</errorMessage>
</ValidationRule>