force-app/main/default/objects/OpportunityLineItem/validationRules/Phase_2_Require_ContractClosed_Won_Opty.validationRule-meta.xml
<ValidationRule>
    <fullName>Phase_2_Require_ContractClosed_Won_Opty</fullName>
    <active>true</active>
    <errorConditionFormula>Opportunity.IsWon &amp;&amp; Opportunity.ECLM_IsReview__c = False &amp;&amp; ( ISBLANK(Contract_End_Date__c)|| ISBLANK(Contract_Start_Date__c))</errorConditionFormula>
    <errorMessage>The Opportunity is at &quot;Closed Won&quot;, please enter Revenue Start and End date.</errorMessage>
</ValidationRule>