force-app/main/default/objects/OpportunityLineItem/validationRules/Prevent_Adding_Non_selling_Product.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Adding_Non_selling_Product</fullName>
    <active>true</active>
    <description>Prevent adding non-selling products into the opportunity.</description>
    <errorConditionFormula>AND(
  NOT(APT_Is_Apttus_Opportunity_Line_item__c),
   Product2.Is_Selling_Product__c = false

)</errorConditionFormula>
    <errorMessage>This is an invalid product. If you wish to proceed, select the standard products from Apttus shopping cart.</errorMessage>
</ValidationRule>