force-app/main/default/objects/OpportunityLineItem/validationRules/Prevent_Revenue_Date_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Revenue_Date_Change</fullName>
    <active>false</active>
    <description>Prevent Revenue Date Change on Start and End date when Opportunity Stage is Closed Won</description>
    <errorConditionFormula>AND(
ISPICKVAL(Opportunity.StageName, &quot;Closed Won&quot;),
ISCHANGED(Contract_Start_Date__c),
ISCHANGED(Contract_End_Date__c),
$Profile.Name &lt;&gt; &apos;System Administrator&apos;)</errorConditionFormula>
    <errorDisplayField>Contract_Start_Date__c</errorDisplayField>
    <errorMessage>You cannot change the revenue start and end date of products when the opportunity has been closed-won</errorMessage>
</ValidationRule>