force-app/main/default/objects/OpportunityLineItem/validationRules/QuantityMandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>QuantityMandatory</fullName>
    <active>true</active>
    <description>The Quantity is Mandatory</description>
    <errorConditionFormula>Quantity = 0</errorConditionFormula>
    <errorDisplayField>Quantity</errorDisplayField>
    <errorMessage>Please enter a Quantity</errorMessage>
</ValidationRule>